[project]
name = "distraction-env"
version = "0.1.0"
description = "AI Digital Distraction Controller"

dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"
